works with proxy and generator tests